2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.2 released.

2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.1 released.

2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.0 released.

2014-10-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.74.3 released.

2014-10-08  c.hetherington  <cth@carlh.net>

	* Make server finding more reliable when
	there are more than a few servers.

2014-10-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.74.2 released.

2014-10-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.74.1 released.

2014-10-05  Carl Hetherington  <cth@carlh.net>

	* Bump ffmpeg version.

2014-10-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.74.0 released.

2014-10-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.9 released.

2014-09-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.8 released.

2014-09-28  Carl Hetherington  <cth@carlh.net>

	* Add a few key shortcuts.

2014-09-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.7 released.

2014-09-16  Carl Hetherington  <cth@carlh.net>

	* Fix non-update of audio gain when changing selected content.

2014-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.6 released.

2014-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.5 released.

2014-09-14  Carl Hetherington  <cth@carlh.net>

	* Update to nl_NL translation from Cherif Ben Brahim.

2014-09-12  Carl Hetherington  <cth@carlh.net>

	* Allow separate X and Y scale for subtitles (#337).

2014-09-10  Carl Hetherington  <cth@carlh.net>

	* Allow DCP names to be created using the ISDCF template and then
	edited afterwards (#401).

	* Fix hidden advanced preferences button in some locales.

2014-09-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.4 released.

2014-09-08  Carl Hetherington  <cth@carlh.net>

	* Fix failure to load Targa files.

2014-09-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.3 released.
