@@ -42,6 +42,7 @@ private:
 	void show_clicked ();
 	void stream_changed ();
 	void mapping_changed (AudioMapping);
+	void setup_description ();
 	void setup_stream_description ();
 
 	ContentSpinCtrlDouble<AudioContent>* _gain;
@@ -49,7 +50,8 @@ private:
 	wxButton* _show;
 	ContentSpinCtrl<AudioContent>* _delay;
 	wxChoice* _stream;
-	wxStaticText* _description;
+	wxStaticText* _stream_description;
 	AudioMappingView* _mapping;
+	wxStaticText* _description;
 	AudioDialog* _audio_dialog;
 };
